Fixed spacing and added new icons

--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,5 @@
 
 body {
   margin: 0;
-  background-color: #f6efe1
+  background-color: #f6efe1;
 }
